@@ -1,3 +1,6 @@
+08/26/09 (Olaf)
+Changed the API of IdBasedGraph (replaced getId and getNode by getNodeDictionary).
+
 Release 0.9.2
 -------------
 
